--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Bedril Moussakat",
   "license": "MIT",
   "dependencies": {
-    "discord.js": "^12.2.0"
+    "discord.js": "^12.2.0",
+    "dotenv-extended": "^2.8.0"
   }
 }
